# cookiecutter-pypackage-poetry

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: on_push_and_pr.yaml  pubplish-pypi.yaml
