[tool.poetry]
name = "cookiecutter-python-package-poetry"
version = "0.1.0"
description = ""
authors = ["iiicebearrr <110714291+iiicebearrr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cookiecutter_python_package_poetry"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
